--- a/src/main/webapp/WEB-INF/vm/student_manage_info.vm
+++ b/src/main/webapp/WEB-INF/vm/student_manage_info.vm
@@ -210,7 +210,7 @@
 						<form id="impform" class="form-horizontal" action="/hr/importStudentInfos" method="post" enctype="multipart/form-data">
                 			<div class="control-group">
 								<input type="file" name="fileField" id="fileField" style="width:400px;"/>
-							  <input type='submit' id="import" class='btn btn-primary' value='导入' />
+							  <input type='button' id="import" class='btn btn-primary' value='导入' />
 							</div>
 						</form>
 					</div>
