--- a/src/main/webapp/WEB-INF/vm/student_manage_info.vm
+++ b/src/main/webapp/WEB-INF/vm/student_manage_info.vm
@@ -57,7 +57,7 @@
 				                  <td>$in.obj.state</td>	              
 				                  <td>
 				                  	<a href="#">查看</a>
-				                  	<a href="#">删除</a>
+				                  	<a href="#" onclick="dodelete('$in.obj.id')">删除</a>
 				                  </td>	
 				                </tr>
 				                 #end
@@ -210,7 +210,7 @@
 						<form id="impform" class="form-horizontal" action="/hr/importStudentInfos" method="post" enctype="multipart/form-data">
                 			<div class="control-group">
 								<input type="file" name="fileField" id="fileField" style="width:400px;"/>
-							  <input type='submit' id="import" class='btn btn-primary' value='导入' />
+							  <input type='button' id="import" class='btn btn-primary' value='导入' />
 							</div>
 						</form>
 					</div>
